--- a/css/override.css
+++ b/css/override.css
@@ -1,3 +1,8 @@
+body {
+    background-color: #121212; /* Dark background */
+    color: #ffffff; /* Light text */
+}
+
 hr {
   margin-top: 30px;
   margin-bottom: 20px;
