--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,8 +9,8 @@
   {% seo %}
   <!-- End SEO -->
 
-<!--   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}"> -->
-  <link rel="stylesheet" type="text/css" href="/css/override.css">
+  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+<!--   <link rel="stylesheet" type="text/css" href="/css/override.css"> -->
 
   {% feed_meta %}
 
