--- a/css/override.css
+++ b/css/override.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #121212; /* Dark background */
+    background-color: #121212 !important; /* Dark background */
     color: #ffffff; /* Light text */
 }
 
