--- a/css/override.css
+++ b/css/override.css
@@ -1,6 +1,6 @@
 body {
     background-color: #121212 !important; /* Dark background */
-    color: #ffffff !important; /* Light text */
+    color: #e01b1b !important; /* Light text */
 }
 
 hr {
