--- a/css/override.css
+++ b/css/override.css
@@ -47,3 +47,13 @@ hr {
   font-size: 2.5em;
   opacity: 0.3;
 }
+
+.site-title {
+    font-size: 26px;
+    font-weight: 300;
+    line-height: 54px;
+    letter-spacing: -1px;
+    margin-bottom: 0;
+    color: aqua !important;
+    float: left;
+}
