--- a/css/override.css
+++ b/css/override.css
@@ -60,3 +60,7 @@ a {
 h1, h2, h3, h4, h5, h6 {
     color: #ffffff !important; /* Ensure headers are white */
 }
+
+.site-title, .site-title:visited {
+    color: red ;
+}
