--- a/css/override.css
+++ b/css/override.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #121212 !important; /* Dark background */
+    background-color: rgb(219, 213, 204) !important; /* Dark background */
     color: #ffffff !important; /* Light text */
 }
 
